# schoolmap

./: EDUACION ESPECIAL FEDERAL(Detalle2).csv  PRIMARIA FEDERAL(PRIMARIA FEDERAL).csv  README.md  clave_ct_list.txt  clave_ct_list_federal_primaria.txt  clave_ct_list_filtrados.txt  clave_ct_list_test.txt  ct_codes_coords_googlelinks.txt  ct_codes_coords_googlelinks_federal_primaria.txt  ct_codes_coords_googlelinks_filtrados.txt  example_usage.py  filtrados.csv  main.py  pyproject.toml  scraper.py  scraper_progress.txt  scraper_progress_filtrados.txt  scraper_utils.py  streamlit_app.py
