[project]
name = "schoolfetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.1",
    "playwright>=1.48.0",
    "pytest-playwright>=0.7.0",
    "streamlit>=1.48.1",
    "streamlit-folium>=0.25.1",
]
